src/css/suneditor.css
@CHARSET "UTF-8";

/* suneditor main */
.sun-editor {width:auto; height:auto; font-family:inherit; border:1px solid #dadada; background-color:#FFF; z-index:10000;}
.sun-editor * {font-family:Helvetica Neue, sans-serif; user-select: none; -webkit-user-drag:none;}
.sun-editor th, .sun-editor td, .sun-editor input, .sun-editor select, .sun-editor textarea, .sun-editor button {font-size:14px; line-height:1.5; color:#111;}
.sun-editor body, .sun-editor div, .sun-editor dl, .sun-editor dt, .sun-editor dd, .sun-editor ul, .sun-editor ol, .sun-editor li,
.sun-editor h1, .sun-editor h2, .sun-editor h3, .sun-editor h4, .sun-editor h5, .sun-editor h6, .sun-editor pre, .sun-editor code, .sun-editor form, .sun-editor fieldset,
.sun-editor legend, .sun-editor textarea, .sun-editor p, .sun-editor blockquote, .sun-editor th, .sun-editor td, .sun-editor input, .sun-editor select, .sun-editor textarea, .sun-editor button {margin:0; padding:0; border:0; color:#000 !important;}
.sun-editor dl, .sun-editor ul, .sun-editor ol, .sun-editor menu, .sun-editor li {list-style: none !important;}
.sun-editor hr {margin:6px 0 6px 0 !important;}
.sun-editor textarea {resize:none !important; border:0 !important;}
.sun-editor button {border:0 none; background-color:transparent; touch-action:manipulation; cursor:pointer;}
.sun-editor input, .sun-editor select, .sun-editor textarea, .sun-editor button {vertical-align: middle;}
.sun-editor button .txt {display: block; margin-top: 0; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}

/** align submenu */
.sun-editor .btn_align .img_editor {display: inline-block; width:14px; height:13px; margin:-1px 10px 0 0; vertical-align:middle; text-indent:-9999px;}

/** icon */
.sun-editor .ico_more {position:absolute; top:14px; right:10px; width:7px; height:7px; background:url('../img/arrow_down.svg') no-repeat; background-size:100%;}
.sun-editor .ico_bold {width:16px; height:16px; margin:0 auto; background:url('../img/font_bold_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_underline {width:16px; height:16px; margin:0 auto; background:url('../img/font_underline_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_italic {width:16px; height:16px; margin:0 auto; background:url('../img/font_italic_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_strike {width:16px; height:16px; margin:0 auto; background:url('../img/font_strokethrough_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_foreColor {width:16px; height:16px; margin:0 auto; background:url('../img/foreColor_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_hiliteColor {width:16px; height:16px; margin:0 auto; background:url('../img/hiliteColor_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_align {width:16px; height:16px; margin:0 auto; background:url('../img/align_left.svg') no-repeat; background-size:100%;}
.sun-editor .ico_align_l {width:16px; height:16px; background:url('../img/align_left.svg') no-repeat; background-size:100%;}
.sun-editor .ico_align_r {width:16px; height:16px; background:url('../img/align_right.svg') no-repeat; background-size:100%;}
.sun-editor .ico_align_c {width:16px; height:16px; background:url('../img/align_center.svg') no-repeat; background-size:100%;}
.sun-editor .ico_align_f {width:16px; height:16px; background:url('../img/align_just.svg') no-repeat; background-size:100%;}
.sun-editor .ico_list_num {width:16px; height:16px; margin: 0 auto; background:url('../img/list_number_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_list_square {width:16px; height:16px; margin: 0 auto; background:url('../img/list_bullets_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_indnet {width:16px; height:16px; margin: 0 auto; background:url('../img/indent_right_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_outdent {width:16px; height:16px; margin: 0 auto; background:url('../img/indent_left_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_table {width:16px; height:16px; margin: 0 auto; background:url('../img/grid_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_url {width:16px; height:16px; margin: 0 auto; background:url('../img/link_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_picture {width:16px; height:16px; margin: 0 auto; background:url('../img/image_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_video {width:16px; height:16px; margin: 0 auto; background:url('../img/video_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_full_screen_e {width:16px; height:16px; margin: 0 auto; background:url('../img/expand_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_full_screen_i {width:16px; height:16px; margin: 0 auto; background:url('../img/import_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_html {width:16px; height:16px; margin: 0 auto; background:url('../img/code_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_undo {width:16px; height:16px; margin: 0 auto; background:url('../img/undo-curve-arrow.svg') no-repeat; background-size:100%;}
.sun-editor .ico_redo {width:16px; height:16px; margin: 0 auto; background:url('../img/redo-curve-arrow.svg') no-repeat; background-size:100%;}
.sun-editor .ico_preview {width:16px; height:16px; margin: 0 auto; background:url('../img/preview_icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_print {width:16px; height:16px; margin: 0 auto; background:url('../img/print-icon.svg') no-repeat; background-size:100%;}
.sun-editor .ico_erase {width:16px; height:16px; margin: 0 auto; background:url('../img/erase_icon.svg') no-repeat; background-size:100%;}

/* container */
.sun-editor .sun-editor-container {position:relative; width:100%; height:100%;}
/* ... */

